--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,10 @@
 *DS_Store
-Results/*/*
-!Results/*/bestvloss.txt
-!Results/*/model_best.json
-!Results/*/model.json
-!Results/*/testloss_final.txt
-*.sh
-slurm*
-runs
+Results/
 .idea/
 .DS_Store
-applet
-application.linux-arm64
-application.linux-armv6hf
-application.linux32
-application.linux64
-application.windows32
-application.windows64
-application.macosx
-out
-Configs/*
+Configs/
 !Configs/.gitkeep
 !Configs/RNN1.json
 !Configs/RNN2.json
-!Configs/RNN3.json
-!Configs/RNN3-LPB1-ex1.json
-!Configs/RNN3-LPB1-ex2.json
-!Configs/RNN3-LPB1_Parameterized.json
-!Configs/RNN3-DS1_Parameterized.json
-!Configs/Parameterization-Config.json
-!Configs/Parameterization-Config-2.json
-Data/*
-!Data/test/ht1-input.wav
-!Data/test/ht1-target.wav
-!Data/train/ht1-input.wav
-!Data/train/ht1-target.wav
-!Data/val/ht1-input.wav
-!Data/val/ht1-target.wav
-!Data/train/muff-input.wav
-!Data/train/muff-target.wav
-!Data/test/muff-input.wav
-!Data/test/muff-target.wav
-!Data/val/muff-input.wav
-!Data/val/muff-target.wav
-Recordings/
-runs2/
+!Configs/RNN3-model.json
+Data/
